ingress/Traefik2.x/ingressRoute-Traefik.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ingress.spamasaurus.com`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: 2fa-authentication@file
        - name: security-headers@file
        - name: compression@file
